--- a/src/libs/System.Drawing/System.Drawing.csproj
+++ b/src/libs/System.Drawing/System.Drawing.csproj
@@ -132,6 +132,6 @@
   </Target>
   -->
   <PropertyGroup>
-    <PostBuildEvent>xcopy $(TargetPath) $(SolutionDir)Builds\$(ConfigurationName)\ /Y</PostBuildEvent>
+    <!-- <PostBuildEvent>xcopy $(TargetPath) $(SolutionDir)Builds\$(ConfigurationName)\ /Y</PostBuildEvent> -->
   </PropertyGroup>
 </Project>
