--- a/src/libs/System/System.csproj
+++ b/src/libs/System/System.csproj
@@ -121,6 +121,6 @@
   </Target>
   -->
   <PropertyGroup>
-    <PostBuildEvent>xcopy $(TargetPath) $(SolutionDir)Builds\$(ConfigurationName)\ /Y</PostBuildEvent>
+    <!-- <PostBuildEvent>xcopy $(TargetPath) $(SolutionDir)Builds\$(ConfigurationName)\ /Y</PostBuildEvent> -->
   </PropertyGroup>
 </Project>
