--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,3 @@
 add_subdirectory(runtime)
-# add_subdirectory(libs)
-
-# add_subdirectory(examples)
+add_subdirectory(libs)
+add_subdirectory(examples)
