--- a/src/examples/Snake/Snake.csproj
+++ b/src/examples/Snake/Snake.csproj
@@ -1,28 +1,53 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-  <PropertyGroup>
-    <!-- <OutputType>Exe</OutputType> -->
-    <TargetFrameworks>net20</TargetFrameworks>
-    <VersionPrefix>2.0.0</VersionPrefix>
-    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
-    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <GenerateDocumentationFile>true</GenerateDocumentationFile>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <!-- <NoStdLib>true</NoStdLib> -->
-    <!-- <DisableImplicitFrameworkReferences>true</DisableImplicitFrameworkReferences> -->
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <FileAlignment>512</FileAlignment>
-    <WindowsForms>true</WindowsForms>
-  </PropertyGroup>
+	<PropertyGroup>
+		 <OutputType>Exe</OutputType> 
+		<TargetFrameworks>net20</TargetFrameworks>
+		<VersionPrefix>2.0.0</VersionPrefix>
+		<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+		<GenerateDocumentationFile>true</GenerateDocumentationFile>
+		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+		<ErrorReport>prompt</ErrorReport>
+		<WarningLevel>4</WarningLevel>
+		<FileAlignment>512</FileAlignment>
+		<Optimize>true</Optimize>
+		<NoWarn>1701;1702;1591</NoWarn>
+		<Configurations>Debug;Release;Windows</Configurations>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="../../libs/CustomDevice/CustomDevice.csproj">
-      <Name>CustomDevice</Name>
-    </ProjectReference>
-  </ItemGroup>
+	<PropertyGroup Condition=" '$(Configuration)' != 'Windows' ">
+		<NoStdLib>true</NoStdLib>
+		<DisableImplicitFrameworkReferences>true</DisableImplicitFrameworkReferences>
+		<WindowsForms>true</WindowsForms>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <Reference Include="System.Windows.Forms" />
-  </ItemGroup>
+	<PropertyGroup Condition=" '$(Configuration)' == 'Windows' ">
+		<WindowsForms>true</WindowsForms>
+	</PropertyGroup>
+
+	<ItemGroup>
+		<ProjectReference Include="../../libs/CustomDevice/CustomDevice.csproj">
+			<Name>CustomDevice</Name>
+		</ProjectReference>
+	</ItemGroup>
+
+	<ItemGroup Condition=" '$(Configuration)' != 'Windows' ">
+		<ProjectReference Include="../../libs/corlib/corlib.csproj">
+			<Name>corlib</Name>
+		</ProjectReference>
+		<ProjectReference Include="../../libs/System/System.csproj">
+			<Name>System</Name>
+		</ProjectReference>
+		<ProjectReference Include="../../libs/System.Core/System.Core.csproj">
+			<Name>System.Core</Name>
+		</ProjectReference>
+		<ProjectReference Include="../../libs/System.Drawing/System.Drawing.csproj">
+			<Name>System.Drawing</Name>
+		</ProjectReference>
+	</ItemGroup>
+
+	<ItemGroup Condition=" '$(Configuration)' == 'Windows' ">
+		<Reference Include="System.Windows.Forms" />
+	</ItemGroup>
 
 </Project>
