--- a/src/libs/CustomDevice/CustomDevice.csproj
+++ b/src/libs/CustomDevice/CustomDevice.csproj
@@ -1,21 +1,45 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-  <PropertyGroup>
-    <TargetFrameworks>net20</TargetFrameworks>
-    <VersionPrefix>2.0.0</VersionPrefix>
-    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
-    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <GenerateDocumentationFile>true</GenerateDocumentationFile>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <!-- <NoStdLib>true</NoStdLib> -->
-    <!-- <DisableImplicitFrameworkReferences>true</DisableImplicitFrameworkReferences> -->
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <FileAlignment>512</FileAlignment>
-    <WindowsForms>true</WindowsForms>
-  </PropertyGroup>
+	<PropertyGroup>
+		<!-- <OutputType>Exe</OutputType> -->
+		<TargetFrameworks>net20</TargetFrameworks>
+		<VersionPrefix>2.0.0</VersionPrefix>
+		<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+		<GenerateDocumentationFile>true</GenerateDocumentationFile>
+		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+		<ErrorReport>prompt</ErrorReport>
+		<WarningLevel>4</WarningLevel>
+		<FileAlignment>512</FileAlignment>
+		<Optimize>true</Optimize>
+		<NoWarn>1701;1702;1591</NoWarn>
+		<Configurations>Debug;Release;Windows</Configurations>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <Reference Include="System.Windows.Forms" />
-  </ItemGroup>
+	<PropertyGroup Condition=" '$(Configuration)' != 'Windows' ">
+		<NoStdLib>true</NoStdLib>
+		<DisableImplicitFrameworkReferences>true</DisableImplicitFrameworkReferences>
+		<WindowsForms>true</WindowsForms>
+	</PropertyGroup>
+
+	<PropertyGroup Condition=" '$(Configuration)' == 'Windows' ">
+		<WindowsForms>true</WindowsForms>
+		<DefineConstants>WINDOWS</DefineConstants>
+	</PropertyGroup>
+
+	<ItemGroup Condition=" '$(Configuration)' != 'Windows' ">
+		<ProjectReference Include="../corlib/corlib.csproj">
+			<Name>corlib</Name>
+		</ProjectReference>
+		<ProjectReference Include="../System/System.csproj">
+			<Name>System</Name>
+		</ProjectReference>
+		<ProjectReference Include="../System.Drawing/System.Drawing.csproj">
+			<Name>System.Drawing</Name>
+		</ProjectReference>
+	</ItemGroup>
+
+	<ItemGroup Condition=" '$(Configuration)' == 'Windows' ">
+		<Reference Include="System.Windows.Forms" />
+	</ItemGroup>
 
 </Project>
