--- a/src/libs/System.Drawing/System.Drawing.csproj
+++ b/src/libs/System.Drawing/System.Drawing.csproj
@@ -1,6 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.1</TargetFrameworks>
+    <!-- <OutputType>Exe</OutputType> -->
+    <TargetFrameworks>net20</TargetFrameworks>
     <VersionPrefix>2.0.0</VersionPrefix>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
@@ -11,6 +12,10 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <FileAlignment>512</FileAlignment>
+    <!-- <WindowsForms>true</WindowsForms> -->
+    <Optimize>true</Optimize>
+    <NoWarn>1701;1702;1591</NoWarn>
+    <Configurations>Debug;Release</Configurations>
   </PropertyGroup>
 
   <ItemGroup>
