--- a/src/examples/Snake/CMakeLists.txt
+++ b/src/examples/Snake/CMakeLists.txt
@@ -1,3 +1,3 @@
 project(Snake)
 
-add_dotnet_core_project("Snake" "${CMAKE_CURRENT_LIST_DIR}")
+add_msbuild_project("Snake" "${CMAKE_CURRENT_LIST_DIR}")
