--- a/src/examples/Snake/Snake.csproj
+++ b/src/examples/Snake/Snake.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
-		 <OutputType>Exe</OutputType> 
+		<OutputType>Exe</OutputType>
 		<TargetFrameworks>net20</TargetFrameworks>
 		<VersionPrefix>2.0.0</VersionPrefix>
 		<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
@@ -10,7 +10,7 @@
 		<ErrorReport>prompt</ErrorReport>
 		<WarningLevel>4</WarningLevel>
 		<FileAlignment>512</FileAlignment>
-		<Optimize>true</Optimize>
+		<!-- <Optimize>true</Optimize> -->
 		<NoWarn>1701;1702;1591</NoWarn>
 		<Configurations>Debug;Release;Windows</Configurations>
 	</PropertyGroup>
@@ -18,7 +18,8 @@
 	<PropertyGroup Condition=" '$(Configuration)' != 'Windows' ">
 		<NoStdLib>true</NoStdLib>
 		<DisableImplicitFrameworkReferences>true</DisableImplicitFrameworkReferences>
-		<WindowsForms>true</WindowsForms>
+		<AutomaticallyUseReferenceAssemblyPackages>false</AutomaticallyUseReferenceAssemblyPackages>
+		<WindowsForms>false</WindowsForms>
 	</PropertyGroup>
 
 	<PropertyGroup Condition=" '$(Configuration)' == 'Windows' ">
@@ -46,8 +47,8 @@
 		</ProjectReference>
 	</ItemGroup>
 
-	<ItemGroup Condition=" '$(Configuration)' == 'Windows' ">
+	<!--<ItemGroup Condition=" '$(Configuration)' != 'Windows' ">
 		<Reference Include="System.Windows.Forms" />
-	</ItemGroup>
+	</ItemGroup>-->
 
 </Project>
