--- a/src/libs/CustomDevice/CustomDevice.csproj
+++ b/src/libs/CustomDevice/CustomDevice.csproj
@@ -18,6 +18,7 @@
 	<PropertyGroup Condition=" '$(Configuration)' != 'Windows' ">
 		<NoStdLib>true</NoStdLib>
 		<DisableImplicitFrameworkReferences>true</DisableImplicitFrameworkReferences>
+		<AutomaticallyUseReferenceAssemblyPackages>false</AutomaticallyUseReferenceAssemblyPackages>
 		<WindowsForms>true</WindowsForms>
 	</PropertyGroup>
 
