--- a/src/libs/System.Core/System.Core.csproj
+++ b/src/libs/System.Core/System.Core.csproj
@@ -1,30 +1,31 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-  <PropertyGroup>
-    <!-- <OutputType>Exe</OutputType> -->
-    <TargetFrameworks>net20</TargetFrameworks>
-    <VersionPrefix>2.0.0</VersionPrefix>
-    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
-    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <GenerateDocumentationFile>true</GenerateDocumentationFile>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <NoStdLib>true</NoStdLib>
-    <DisableImplicitFrameworkReferences>true</DisableImplicitFrameworkReferences>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <FileAlignment>512</FileAlignment>
-    <!-- <WindowsForms>true</WindowsForms> -->
-    <Optimize>true</Optimize>
-    <NoWarn>1701;1702;1591</NoWarn>
-    <Configurations>Debug;Release</Configurations>
-  </PropertyGroup>
+	<PropertyGroup>
+		<!-- <OutputType>Exe</OutputType> -->
+		<TargetFrameworks>net20</TargetFrameworks>
+		<VersionPrefix>2.0.0</VersionPrefix>
+		<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+		<GenerateDocumentationFile>true</GenerateDocumentationFile>
+		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+		<NoStdLib>true</NoStdLib>
+		<DisableImplicitFrameworkReferences>true</DisableImplicitFrameworkReferences>
+		<AutomaticallyUseReferenceAssemblyPackages>false</AutomaticallyUseReferenceAssemblyPackages>
+		<ErrorReport>prompt</ErrorReport>
+		<WarningLevel>4</WarningLevel>
+		<FileAlignment>512</FileAlignment>
+		<!-- <WindowsForms>true</WindowsForms> -->
+		<Optimize>true</Optimize>
+		<NoWarn>1701;1702;1591</NoWarn>
+		<Configurations>Debug;Release</Configurations>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="../corlib/corlib.csproj">
-      <Name>corlib</Name>
-    </ProjectReference>
-    <ProjectReference Include="../System/System.csproj">
-      <Name>System</Name>
-    </ProjectReference>
-  </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="../corlib/corlib.csproj">
+			<Name>corlib</Name>
+		</ProjectReference>
+		<ProjectReference Include="../System/System.csproj">
+			<Name>System</Name>
+		</ProjectReference>
+	</ItemGroup>
 
 </Project>
